--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "express": "^4.18.3",
     "framer-motion": "^10.8.5",
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.0",
+    "react-awesome-button": "^7.0.5",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
